--- a/app/styles/layout/_modals.scss
+++ b/app/styles/layout/_modals.scss
@@ -60,6 +60,12 @@
   padding: 15px;
 }
 
+.modal-dialog {
+  @media (max-width: 544px) {
+    margin: 20px;
+  }
+}
+
 .modal-wrapper {
   padding: 20px;
   padding-top: 5px;
